--- a/GUI/Mainwindow.ui
+++ b/GUI/Mainwindow.ui
@@ -188,7 +188,7 @@
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap>Dimensiones.PNG</pixmap>
+     <pixmap>imgs/Dimensiones.PNG</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -412,6 +412,19 @@
       </widget>
      </item>
     </layout>
+   </widget>
+   <widget class="Line" name="line">
+    <property name="geometry">
+     <rect>
+      <x>7</x>
+      <y>250</y>
+      <width>241</width>
+      <height>10</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
